Collapse css fixes

--- a/src/css/AntdOverrides.scss
+++ b/src/css/AntdOverrides.scss
@@ -64,8 +64,8 @@
 
   .ant-collapse-content {
     overflow: initial;
-    padding: 14px 0 14px 0;
     border-top: none;
+    padding-bottom: 14px;
   }
 
   .ant-collapse-header {
